<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info">

    <TextView
        android:id="@+id/tv_num_fig_comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:text="@string/tv_n_figuras_completadas"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_figuras_completadas"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/tv_figuras_completadas" />

    <TextView
        android:id="@+id/tv_figuras_completadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_txt_figuras_completadas"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_num_fig_comp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_txt_nivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/tv_txt_nivel"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_n_puntos" />

    <TextView
        android:id="@+id/tv_num_nivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_n_figuras_completadas"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_txt_nivel"
        app:layout_constraintStart_toStartOf="@+id/tv_txt_nivel"
        app:layout_constraintTop_toBottomOf="@+id/tv_txt_nivel" />

    <TextView
        android:id="@+id/tv_n_puntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_n_figuras_completadas"
        android:textColor="#FF9800"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_puntos"
        app:layout_constraintStart_toStartOf="@+id/tv_puntos"
        app:layout_constraintTop_toBottomOf="@+id/tv_puntos" />

    <TextView
        android:id="@+id/tv_puntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="74dp"
        android:text="@string/tv_txt_puntos"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>